# argus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.jetson  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
argus/: __init__.py  cli.py
argus/analytics/: __init__.py  counting.py  speed.py  trajectory.py
argus/data/: __init__.py  calibration.py  visdrone.py
argus/detection/: __init__.py  detector.py  postprocess.py  sahi.py
argus/eval/: __init__.py  interpolation.py  mot_io.py  mot_metrics.py  synthetic.py
argus/inference/: __init__.py  export.py  onnx_detector.py  reid.py  tensorrt_engine.py  trt_detector.py
argus/pipeline/: __init__.py  async_pipeline.py  video_pipeline.py
argus/tracking/: __init__.py  basetrack.py  byte_tracker.py  gmc.py  kalman_filter.py  matching.py  track.py
argus/utils/: __init__.py  config.py  timer.py  visualization.py
configs/: default.yaml  train.yaml  visdrone.yaml
docs/: DEPLOYMENT.md  DESIGN.md  RUNPOD.md
notebooks/: train_visdrone_colab.ipynb
scripts/: benchmark.py  benchmark_tracker.py  demo_analytics.py  demo_synthetic.py  download_visdrone.py  eval_mot.py  eval_mot_demo.py  evaluate.py  export_tensorrt.py  prepare_visdrone.py  train.py
scripts/cloud/: runpod_bootstrap.sh
tests/: test_analytics.py  test_async_pipeline.py  test_config_run.py  test_gmc.py  test_interpolation.py  test_kalman.py  test_matching.py  test_mot_metrics.py  test_onnx_detector.py  test_pipeline.py  test_postprocess.py  test_reid.py  test_sahi.py  test_synthetic_eval.py  test_tracker.py  test_visdrone.py
